public/css/app.css
:root{
  --website-main-color: #0d6efd;
}

/*!********************************** COMMON TAGS **********************************!*/
body{
  overflow-y: scroll;
  overflow-x: hidden;
  min-height: 90vh;
  position: relative;
}

header, 
footer{
  width: 100%;
}

footer{
  position: absolute;
  bottom: -10vh;
}

a{
  text-decoration: none;
  color: var(--website-main-color); 
}

a:hover{
  color: inherit;
}

input:focus{
  border-color: var(--website-main-color);
  box-shadow: none !important;
}

/*!******************************** NAVBAR CLASSES *********************************!*/
.navbar-button{
  background: none !important;
}
/*!********************************** COMMON TAGS **********************************!*/

#content{
  margin: 30px 5%;
}

.dropdown-toggle{
  background: none;
  border: none;
}

.profile-title{
  font-size: 24px;
  font-weight: bold;
}

.price{
  color: var(--website-main-color);
  font-weight: bold;
}

/*!********************************* BUTTONS COLORS ********************************!*/
.btn a{
  color: inherit;
}
/*!************************************* COLORS ************************************!*/
.text-orange-500{
  color: #fd7e14;
}

.text-teal-500{
  color: #20c997;
}

/*!********************************** USEFUL SIZES *********************************!*/
.w-5{
  width: 5%;
}

.w-10{
  width: 10%;
}

.w-15{
  width: 15%;
}

.w-60{
  width: 60%;
}

.w-90{
  width: 90%;
}

.h-15{
  height: 15%;
}

